--- a/react-app/my-app/package.json
+++ b/react-app/my-app/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "file-loader": "^6.2.0",
     "tailwindcss": "^3.0.24"
   }
 }
