--- a/react-app/my-app/package.json
+++ b/react-app/my-app/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "emailjs-com": "^3.2.0",
     "font-awesome": "^4.7.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
@@ -17,6 +18,9 @@
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.2",
+    "sweetalert2": "^11.4.9",
     "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
