--- a/react-app/my-app/package.json
+++ b/react-app/my-app/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
