--- a/react-app/my-app/package.json
+++ b/react-app/my-app/package.json
@@ -19,6 +19,8 @@
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-simple-image-slider": "^2.4.1",
+    "react-slideshow-image": "^3.7.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
     "sweetalert2": "^11.4.9",
